# portafolio-jdvalmart

./: .env.example  .gitignore  README.md  Untitled  index.html  netlify.toml  package.json  render.yaml
.atl/: skill-registry.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py
backend/src/data/: chunks.json
backend/src/routers/: chat.py
backend/src/services/: embeddings.py  llm_service.py  rag_service.py  vector_store.py
backend/tests/: conftest.py  test_api.py  test_embeddings.py  test_llm_service.py  test_rag_service.py  test_vector_store.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx
frontend/src/components/: ChatBot.tsx  ErrorBoundary.tsx  FeaturedProjects.tsx  Hero.tsx  Layout.tsx  ProjectCard.tsx  Skills.tsx  SkillsPreview.tsx  StatsBar.tsx  Timeline.tsx
frontend/src/data/: certifications.ts  chatbot-knowledge.json  (+3 more)
public/: _redirects
public/cv/: index.html
shared/data/: chunks.json
src/: App.tsx
src/components/: CertBadges.tsx  ChatBot.tsx  FeaturedProjects.tsx  Hero.tsx  Layout.tsx  ProjectCard.tsx  Skills.tsx  SkillsPreview.tsx  StatsBar.tsx  Timeline.tsx
src/data/: certifications.ts  chatbot-knowledge.json  projects.ts  timeline.ts
src/hooks/: useChatBot.ts  useScrollReveal.ts
src/i18n/: LanguageContext.tsx  translations.ts
src/pages/: About.tsx  Contact.tsx  Home.tsx  Projects.tsx
src/routes/: AppRoutes.tsx
src/services/: rag.ts
src/test/: setup.ts
(+20 files in other folders)
